--- a/efteraar.html
+++ b/efteraar.html
@@ -86,7 +86,7 @@
             <!--Illustration til højre-->
             <!--Illustration skal ikke vises på mobil. Op efter fylder den 2 kol. og har 2 tomme kol. til venstre-->
             <div class="d-none d-sm-block col-sm-2 offset-sm-4">
-                <img src="#" alt="illustration">
+                <img src="img/illustrationer/gulerod.png" alt="illustration">
             </div>
         </div>
     </div>
@@ -95,31 +95,27 @@
     <!-- Efterårets lune retter - organge container -->
         <div class="container-fluid orange">
         <div class="container py-5">
-            <div class="col-12 py-4 col-sm-6 px-sm-5">
+            <div class="col-12 py-4 col-lg-6 px-sm-5">
                 <h2>Efterårets Lune Retter</h2>
                 <p>Her finder du opskrifter med alt det bedste fra efteråret – som græskar, rødbeder, pastinak og æbler. Retter, der smager af stearinlys, tæpper og lange, hyggelige middage med dem, du holder af.
                 </p>
             </div>
         <div class="alle-efteraar row align-items-start px-sm-5 text-center">
             <div class="col-12 col-sm-4 py-3">
-                <a href="efteraar1.html"><img src="https://placehold.co/80x100" alt=""></a>
-                <a href="efteraar1.html"><h3>Opskrift</h3></a>
+              <a href="efteraar1.html"><img src="img/efteraar/efteraar1billede2.png" alt=""></a>
+              <a href="efteraar1.html"><h3>Efterårssuppe med Hokkaido, gulerod og ingefær</h3></a>
             </div>
             <div class="col-12 col-sm-4 py-3">
-                <a href="efteraar2.html"><img src="https://placehold.co/80x100" alt=""></a>
-                <a href="efteraar2.html"><h3>Opskrift</h3></a>
+              <a href="efteraar2.html"><img src="img/efteraar/efteraar2billede1.png" alt=""></a>
+              <a href="efteraar2.html"><h3>Efterårs-gnocchi med tomat, salvie og karamelliseret løg</h3></a>
             </div>
         <div class="col-12 col-sm-4 py-3">
-            <a href="efteraar3.html"><img src="https://placehold.co/80x100" alt=""></a>
-            <a href="efteraar3.html"><h3>Opskrift</h3></a>
+          <a href="efteraar3.html"><img src="img/efteraar/efteraarbillede.png" alt=""></a>
+          <a href="efteraar3.html"><h3>Efterårspande med karamelliserede porrer og gulerødder</h3></a>
         </div>
         </div>
     </div>
     </div>
-
-
-
-
 
 
 
