--- a/foraar.html
+++ b/foraar.html
@@ -90,7 +90,7 @@
             <!--Illustration til højre-->
             <!--Illustration skal ikke vises på mobil. Op efter fylder den 2 kol. og har 2 tomme kol. til venstre-->
             <div class="d-none d-sm-block col-sm-2 offset-sm-4">
-                <img src="#" alt="illustration">
+                <img src="img/illustrationer/vin.png" alt="illustration">
             </div>
         </div>
     </div>
@@ -98,28 +98,27 @@
 
     <div class="alle-foraar container-fluid orange">
         <div class="container py-5">
-            <div class="col-12 py-4 col-sm-6 px-sm-5">
+            <div class="col-12 py-4 col-lg-6 px-sm-5">
                 <h2>Smagen af forår</h2>
                 <p>Her finder du opskrifter med alt det bedste fra foråret – som asparges, spinat, radiser og nye kartofler.
                 Retter, der smager af solskin, spirende altaner og middage med åbne vinduer.</p>
             </div>
         <div class="row align-items-start px-sm-5 text-center">
-            <div class="col-12 col-sm-4 py-3">
-                <a href="foraar1.html"><img src="img/foraar/foraaropskrift1.png" alt=""></a>
-                <a href="foraar1.html"><h3>Opskrift</h3></a>
+            <div class="col-12 col-sm-4 py-3 text-center">
+              <a href="foraar1.html"><img src="img/foraar/foraaropskrift1.png" alt=""></a>
+              <a href="foraar1.html"><h3>Pasta med tomat, spidskål og ramsløgspesto</h3></a>
+              </div>
+            <div class="col-12 col-sm-4 py-3 text-center">
+              <a href="foraar2.html"><img src="img/foraar/foraar2billede1.png" alt=""></a>
+              <a href="foraar2.html"><h3>Forårs-orzo med tomater og citron</h3></a>
             </div>
-            <div class="col-12 col-sm-4 py-3">
-                <a href="foraar2.html"><img src="img/foraar/foraar2billede1.png" alt=""></a>
-                <a href="foraar2.html"><h3>Opskrift</h3></a>
-            </div>
-        <div class="col-12 col-sm-4 py-3">
-            <a href="foraar3.html"><img src="img/foraar/foraar3billede2.png" alt=""></a>
-            <a href="foraar3.html"><h3>Opskrift</h3></a>
+        <div class="col-12 col-sm-4 py-3 text-center">
+          <a href="foraar3.html"><img src="img/foraar/foraar3billede2.png" alt=""></a>
+          <a href="foraar3.html"><h3>Forårsnudler med radiser, porre og sesam</h3></a>
         </div>
         </div>
     </div>
     </div>
-
 
 
 
