--- a/sommer.html
+++ b/sommer.html
@@ -87,7 +87,7 @@
             <!--Illustration til højre-->
             <!--Illustration skal ikke vises på mobil. Op efter fylder den 2 kol. og har 2 tomme kol. til venstre-->
             <div class="d-none d-sm-block col-sm-2 offset-sm-4">
-                <img src="#" alt="illustration">
+                <img src="img/illustrationer/jordbaer.png" alt="illustration">
             </div>
         </div>
     </div>
@@ -95,23 +95,23 @@
     <!-- Smagen af Sol og Sommer - orange container -->
         <div class="container-fluid orange">
         <div class="container py-5">
-            <div class="col-12 py-4 col-sm-6 px-sm-5">
+            <div class="col-12 py-4 col-lg-6 px-sm-5">
                 <h2>Smagen af Sol og Sommer</h2>
                 <p>Her finder du opskrifter med alt det bedste fra sommerens køkken – som squash, jordbær, ærter og spidskål. Retter, der smager af feriefornemmelser, kolde drikke og aftener, der strækker sig lidt længere end resten af året.
                 </p>
             </div>
         <div class="alle-sommer row align-items-start px-sm-5 text-center">
             <div class="col-12 col-sm-4 py-3">
-                <a href="sommer1.html"><img src="https://placehold.co/80x100" alt=""></a>
-                <a href="sommer1.html"><h3>Opskrift</h3></a>
+              <a href="sommer1.html"><img src="img/sommer/sommer1billede1.png" alt=""></a>
+              <a href="sommer1.html"><h3>Sommersalat med jordbær, burrata og nem focaccia</h3></a>
             </div>
             <div class="col-12 col-sm-4 py-3">
-                <a href="sommer2.html"><img src="https://placehold.co/80x100" alt=""></a>
-                <a href="sommer2.html"><h3>Opskrift</h3></a>
+              <a href="sommer2.html"><img src="img/sommer1.png" alt=""></a>
+              <a href="sommer2.html"><h3>Sommer-tacos med ærtemos og grillede grøntsager</h3></a>
             </div>
         <div class="col-12 col-sm-4 py-3">
-            <a href="sommer3.html"><img src="https://placehold.co/80x100" alt=""></a>
-            <a href="sommer3.html"><h3>Opskrift</h3></a>
+          <a href="sommer3.html"><img src="img/sommer/sommer3billede1.png" alt=""></a>
+          <a href="sommer3.html"><h3>Sommerpizza med sæsonens grønt og sprød bund</h3></a>
         </div>
         </div>
     </div>
