--- a/vinter.html
+++ b/vinter.html
@@ -87,7 +87,7 @@
             <!--Illustration til højre-->
             <!--Illustration skal ikke vises på mobil. Op efter fylder den 2 kol. og har 2 tomme kol. til venstre-->
             <div class="d-none d-sm-block col-sm-2 offset-sm-4">
-                <img src="#" alt="illustration">
+                <img src="img/illustrationer/porre.png" alt="illustration">
             </div>
         </div>
     </div>
@@ -96,28 +96,27 @@
     <!-- Mad med vinterstemning - orange container -->
         <div class="container-fluid orange">
         <div class="container py-5">
-            <div class="col-12 py-4 col-sm-6 px-sm-5">
+            <div class="col-12 py-4 col-lg-6 px-sm-5">
                 <h2>Mad med Vinterstemning</h2>
                 <p>Her finder du opskrifter med vinterens råvarer som rødkål, pastinak, jordskok og græskar. Retter, der luner, mætter og giver ro midt i mørket – perfekte til både hverdagsmad og hyggelige aftener med venner.
                 </p>
             </div>
         <div class="alle-vinter row align-items-start px-sm-5 text-center">
             <div class="col-12 col-sm-4 py-3">
-                <a href="vinter1.html"><img src="https://placehold.co/80x100" alt=""></a>
-                <a href="vinter1.html"><h3>Opskrift</h3></a>
+              <a href="vinter1.html"><img src="img/vinter/vinter1.png" alt=""></a>
+              <a href="vinter1.html"><h3>Vinter-nudler med porre, kål og cremet sesamsauce</h3></a>
             </div>
             <div class="col-12 col-sm-4 py-3">
-                <a href="vinter2.html"><img src="https://placehold.co/80x100" alt=""></a>
-                <a href="vinter2.html"><h3>Opskrift</h3></a>
+              <a href="vinter2.html"><img src="img/vinter/vinter2billede2.png" alt=""></a>
+              <a href="vinter2.html"><h3>Vinterpasta med grønkålssauce og citron</h3></a>
             </div>
         <div class="col-12 col-sm-4 py-3">
-            <a href="vinter3.html"><img src="https://placehold.co/80x100" alt=""></a>
-            <a href="vinter3.html"><h3>Opskrift</h3></a>
+          <a href="vinter3.html"><img src="img/vinter/vinter3billede1.png" alt=""></a>
+          <a href="vinter3.html"><h3>Vinterpande med grønkål, svampe og flødestuvet perlebyg</h3></a>
         </div>
         </div>
     </div>
     </div>
-
 
     <!--Footer-->
     
