--- a/sommer2.html
+++ b/sommer2.html
@@ -17,6 +17,7 @@
   
   <body>
     <!--NAVIGATIONSBAR-->
+    <!--NAVIGATIONSBAR-->
 <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
   <div class="container-fluid">
     <a class="navbar-brand logo" href="index.html"><img src="img/logo.png" alt="logo skål"></a>
@@ -51,7 +52,6 @@
     </div>
   </div>
 </nav>
-
 
 
 <!--HERO-SEKTION-->
