--- a/foraar.html
+++ b/foraar.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-  <!--NAVIGATIONSBAR-->
+    <!--NAVIGATIONSBAR-->
 <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
   <div class="container-fluid">
     <a class="navbar-brand logo" href="index.html"><img src="img/logo.png" alt="logo skål"></a>
@@ -54,7 +54,6 @@
     </div>
   </div>
 </nav>
-
 
 
     <!--HERO-SEKTION-->
@@ -166,6 +165,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
         crossorigin="anonymous"></script>
+
+     <script src="script.js"></script>
 </body>
 
 </html>
