--- a/sommer.html
+++ b/sommer.html
@@ -54,7 +54,6 @@
   </div>
 </nav>
 
-
     <!--HERO-SEKTION-->
     <!--BAGGRUNDSBILLEDE-->
     <!--position-relative: gør container til ref. for det, som skal placeres ovenpå-->
@@ -164,6 +163,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
         crossorigin="anonymous"></script>
+     <script src="script.js"></script>
 </body>
 
 </html>
