--- a/vinter.html
+++ b/vinter.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-   <!--NAVIGATIONSBAR-->
+    <!--NAVIGATIONSBAR-->
 <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
   <div class="container-fluid">
     <a class="navbar-brand logo" href="index.html"><img src="img/logo.png" alt="logo skål"></a>
@@ -53,7 +53,6 @@
     </div>
   </div>
 </nav>
-
 
 
     <!--HERO-SEKTION-->
@@ -165,6 +164,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
         crossorigin="anonymous"></script>
+
+     <script src="script.js"></script>
+
 </body>
 
 </html>
