--- a/alleopskrifter.html
+++ b/alleopskrifter.html
@@ -18,7 +18,7 @@
   
   <body>
     <!--NAVIGATIONSBAR-->
-<nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
+<nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top px-4">
   <div class="container-fluid">
     <a class="navbar-brand logo" href="index.html"><img src="img/logo.png" alt="logo skål"></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -81,7 +81,7 @@
 <div id="alle-foraar" class="container-fluid orange d-none d-md-block">
   <div class="container py-5 ">
     <div class="row align-items-start px-5">
-        <h2>Forår</h2>
+        <a href="foraar.html"><h2>Forår</h2></a>
              <div class="col text-center">
             <a href="foraar1.html"><img src="img/foraar/foraaropskrift1.png" alt=""></a>
             <a href="foraar1.html"><h3>Pasta med tomat, spidskål og ramsløgspesto</h3></a>
@@ -102,7 +102,7 @@
 <!--Sommer opskrifter-->
 <div id="alle-sommer" class="container d-none d-md-block">
   <div class="row align-items-start py-5 px-5">
-    <h2>Sommer</h2>
+    <a href="sommer.html"><h2>Sommer</h2></a>
     <div class="col text-center">
       <a href="sommer1.html"><img src="img/sommer/sommer1billede1.png" alt=""></a>
       <a href="sommer1.html"><h3>Sommersalat med jordbær, burrata og nem focaccia</h3></a>
@@ -122,7 +122,7 @@
 <div id="alle-efteraar" class="container-fluid orange mere-padding d-none d-md-block">
   <div class="container py-5">
         <div class="row align-items-start px-5">
-            <h2>Efterår</h2>
+            <a href="efteraar.html"><h2>Efterår</h2></a>
             <div class="col text-center">
                 <a href="efteraar1.html"><img src="img/efteraar/efteraar1billede2.png" alt=""></a>
                 <a href="efteraar1.html"><h3>Efterårssuppe med Hokkaido, gulerod og ingefær</h3></a>
@@ -142,7 +142,7 @@
 <!--Vinter opskrifter-->
 <div id="alle-vinter" class="container d-none d-md-block">
   <div class="row align-items-start my-5 px-5">
-    <h2>Vinter</h2>
+    <a href="vinter.html"><h2>Vinter</h2></a>
     <div class="col text-center">
       <a href="vinter1.html"><img src="img/vinter/vinter1.png" alt=""></a>
       <a href="vinter1.html"><h3>Vinter-nudler med porre, kål og cremet sesamsauce</h3></a>
@@ -167,7 +167,7 @@
     <div class="alle-foraar col-12 col-md-6 col-lg-3 mb-4 container-fluid orange py-4">
       <div id="carousel-foraar" class="carousel slide" data-bs-touch="false">
         <div class="carousel-inner">
-          <h2 class="px-3">Forår</h2>
+          <a href="Forår"><h2 class="px-3">Forår</h2></a>
           <div class="carousel-item active text-center">
             <a href="foraar1.html">
               <img src="img/foraar/foraaropskrift1.png" class="d-block w-100" alt="Forår opskrift 1">
@@ -199,7 +199,7 @@
     <!-- Sommer -->
     <div class="alle-sommer col-12 col-md-6 col-lg-3 mb-4">
       <div id="carousel-sommer" class="carousel slide" data-bs-touch="false">
-        <h2 class="px-3">Sommer</h2>
+        <a href="sommer.html"><h2 class="px-3">Sommer</h2></a>
         <div class="carousel-inner">
           <div class="carousel-item active text-center">
             <a href="sommer1.html">
@@ -232,7 +232,7 @@
     <!-- Efterår -->
     <div class="alle-efteraar col-12 col-md-6 col-lg-3 mb-4 container-fluid orange py-4">
       <div id="carousel-efteraar" class="carousel slide" data-bs-touch="false">
-        <h2 class="px-3">Efterår</h2>
+        <a href="efteraar.html"><h2 class="px-3">Efterår</h2></a>
         <div class="carousel-inner">
           <div class="carousel-item active text-center">
             <a href="efteraar1.html">
@@ -265,7 +265,7 @@
     <!-- Vinter -->
     <div class="alle-vinter col-12 col-md-6 col-lg-3 mb-4">
       <div id="carousel-vinter" class="carousel slide" data-bs-touch="false">
-        <h2 class="px-3">Vinter</h2>
+        <a href="vinter.html"><h2 class="px-3">Vinter</h2></a>
         <div class="carousel-inner">
           <div class="carousel-item active text-center">
             <a href="vinter1.html">
