--- a/alleopskrifter.html
+++ b/alleopskrifter.html
@@ -53,17 +53,15 @@
   </div>
 </nav>
 
-
 <!--OVERSKRIFT-->
-
-<div class="container my-sm-5 px-sm-5">
+<div class="custom-container my-sm-5">
   <h1>Alle opskrifter</h1>
   <h4>Gør mere med mindre – lækre måltider til små budgetter.</h4>
 </div>
 
 <!--INTRODUKTIONS-AFSNIT-->
-<div class="container introduktion">
-  <div class="row align-items-start my-5 mx-4 mx-sm-4">
+<div class="custom-container">
+  <div class="row align-items-start my-5">
     <!--Tekstfelt m. introduktion til side-->
     <!--Tekst skal fylde 12 kol. på mobil og op efter 8 kol. -->
     <div class="col-12 col-sm-6">
@@ -78,9 +76,9 @@
 </div>
 
 <!--Forår opskrifter-->
-<div id="alle-foraar" class="container-fluid orange d-none d-md-block">
-  <div class="container py-5 ">
-    <div class="row align-items-start px-5">
+<div id="alle-foraar" class="orange d-none d-md-block">
+  <div class="custom-container py-5 ">
+    <div class="row align-items-start">
         <a href="foraar.html"><h2>Forår</h2></a>
              <div class="col text-center">
             <a href="foraar1.html"><img src="img/foraar/foraaropskrift1.png" alt=""></a>
@@ -100,8 +98,8 @@
 </div>
 
 <!--Sommer opskrifter-->
-<div id="alle-sommer" class="container d-none d-md-block">
-  <div class="row align-items-start py-5 px-5">
+<div id="alle-sommer" class="custom-container d-none d-md-block">
+  <div class="row align-items-start py-5">
     <a href="sommer.html"><h2>Sommer</h2></a>
     <div class="col text-center">
       <a href="sommer1.html"><img src="img/sommer/sommer1billede1.png" alt=""></a>
@@ -119,9 +117,9 @@
 </div>
 
 <!--Efterår opskrifter-->
-<div id="alle-efteraar" class="container-fluid orange mere-padding d-none d-md-block">
-  <div class="container py-5">
-        <div class="row align-items-start px-5">
+<div id="alle-efteraar" class="orange mere-padding d-none d-md-block">
+  <div class="custom-container py-5">
+        <div class="row align-items-start">
             <a href="efteraar.html"><h2>Efterår</h2></a>
             <div class="col text-center">
                 <a href="efteraar1.html"><img src="img/efteraar/efteraar1billede2.png" alt=""></a>
@@ -139,9 +137,10 @@
   </div>
 </div>
 
+
 <!--Vinter opskrifter-->
-<div id="alle-vinter" class="container d-none d-md-block">
-  <div class="row align-items-start my-5 px-5">
+<div id="alle-vinter" class="custom-container d-none d-md-block">
+  <div class="row align-items-start my-5">
     <a href="vinter.html"><h2>Vinter</h2></a>
     <div class="col text-center">
       <a href="vinter1.html"><img src="img/vinter/vinter1.png" alt=""></a>
@@ -160,7 +159,7 @@
 
 <!--Karussel til mobil-verison-->
 <!--Karussel Forår-->
-<main class="container my-5 d-block d-md-none">
+<main class="custom-container my-5 d-block d-md-none">
   <div class="row carousel-container">
 
     <!-- Forår -->
