--- a/omos.html
+++ b/omos.html
@@ -54,37 +54,36 @@
 
 
 
-<div class="container my-5 px-5">
+<div class="custom-container my-5">
   <h1>Om Os</h1>
 </div>
 
 <!--Første del m. Amalie og Lærke / kokke-->
-<div class="container">
-  <div class="row align-items-start my-1 mx-md-5">
-    <div class="col-12 col-md-5 offset-lg-1">
+<div class="custom-container">
+  <div class="row align-items-start my-1">
+    <div class="col-12 col-md-5">
       <!--Billede af Amalie og Lærke-->
       <img class="kokke" src="img/omos/kokke.png" alt="">
     </div>
-    <div class="col-12 col-md-5 my-5">
+    <div class="col-12 col-md-7 my-5">
       <!--Tekst om kokke-->
       <h2>Det starter i køkkenet...</h2>
-      <p>I køkkenet finder du vores to passionerede kokke - Amalie til venstre og Lærke til højre - som elsker at nørde smage, skrælle kartofler i godt selskab og trylle med sæsonens friske råvarer. Det er dem, der står bag de opskrifter, du finder her på siden. Opskrifterne er enkle, ærlige og skabt med masser af kærlighed til hjemmelavet mad. For Amalie og Lærke handler det ikke om det perfekte billede til sociale medier, men om duften i køkkenet, smagen af noget godt – og glæden ved at skabe mad fra bunden, der samler folk omkring bordet.</p>
+      <p>I køkkenet finder du vores to passionerede kokke - Amalie til venstre og Lærke til højre - som elsker at nørde smage, skrælle kartofler i godt selskab og trylle med sæsonens friske råvarer. Det er dem, der står bag de opskrifter, du finder her på siden. Opskrifterne er enkle, ærlige og skabt med masser af kærlighed til hjemmelavet mad. <br> For Amalie og Lærke handler det ikke om det perfekte billede til sociale medier, men om duften i køkkenet, smagen af noget godt - og glæden ved at skabe mad fra bunden, der samler folk omkring bordet.</p>
       <img class="madlavning d-none d-lg-block" src="img/omos/amalieoglaerkekoekkenet.png" class="" alt="">
     </div>
   </div>
 </div>
 
 
-<!--Anden del - 2 andre personer bag holdet-->
-<div class="container">
-  <div class="row align-items-start mx-md-5">
+<!--Anden del - Katrine og Marie / website mv.-->
+<div class="custom-container my-2">
+  <div class="row align-items-start">
     <!--Order: så der ved mobilverison er en anden rækkefølge. Tekst+billede og tekst+billede-->
-    <div class="col-12 col-md-5 offset-lg-1 order-2 order-md-1">
+    <div class="col-12 col-md-7 order-2 order-md-1">
       <!--Tekst om 'bag' website hold-->
       <h2>...og samler sig i et fælles madunivers</h2>
-      <p>Bag skærmen finder du Katrine til venstre og Marie til højre - to kreative kræfter, der sammen står for alt det, du ser og læser her på siden. De udvikler idéerne, former indholdet og skaber det visuelle udtryk, der binder hele maduniverset sammen. Sammen med Amalie og Lærke i køkkenet arbejder vi på at skabe et sted med plads til alle - hvor fællesskab, nærvær og kærligheden til sæsonens råvarer er i centrum. Her handler det om mere end mad - det handler om stemning, inspiration og glæden ved at skabe noget sammen.
-
-</p>
+      <p>Bag skærmen finder du Katrine til venstre og Marie til højre - to kreative kræfter, der sammen står for alt det, du ser og læser her på siden. De udvikler idéerne, former indholdet og skaber det visuelle udtryk, der binder hele maduniverset sammen. <br><br> Sammen med Amalie og Lærke i køkkenet arbejder vi på at skabe et sted med plads til alle - hvor fællesskab, nærvær og kærligheden til sæsonens råvarer er i centrum. Her handler det om mere end mad - det handler om stemning, inspiration og glæden ved at skabe noget sammen.
+      </p>
     </div>
     <!--Order: så der ved mobilverison er en anden rækkefølge. Tekst+billede og tekst+billede-->
     <div class="col-12 col-md-5 order-1 order-md-1 ">
@@ -95,9 +94,9 @@
 </div>
 
 
-<div class="container text-center">
+<div class="custom-container text-center">
   <div class="row align-items-start">
-    <div class="col-6 col-md-5 offset-md-2">
+    <div class="col-6 col-md-5 offset-md-1">
       <img src="img/omos/paastranden.png" alt="">
     </div>
     <div class="col-6 col-md-4">
