--- a/sommer.html
+++ b/sommer.html
@@ -75,8 +75,8 @@
     </div>
 
     <!--INTRODUKTIONS-AFSNIT-->
-    <div class="container">
-        <div class="row align-items-start my-5 mx-sm-4">
+    <div class="custom-container">
+        <div class="row align-items-start my-5">
             <!--Tekstfelt m. introduktion til side-->
             <!--Tekst skal fylde 12 kol. på mobil og op efter 6 kol. -->
             <div class="col-12 col-sm-6">
@@ -92,14 +92,14 @@
     </div>
 
     <!-- Smagen af Sol og Sommer - orange container -->
-        <div class="container-fluid orange">
-        <div class="container py-5">
-            <div class="col-12 py-4 col-lg-6 px-sm-5">
+        <div class="orange">
+        <div class="custom-container py-5">
+            <div class="col-12 py-4 col-lg-6">
                 <h2>Smagen af Sol og Sommer</h2>
                 <p>Her finder du opskrifter med alt det bedste fra sommerens køkken – som squash, jordbær, ærter og spidskål. Retter, der smager af feriefornemmelser, kolde drikke og aftener, der strækker sig lidt længere end resten af året.
                 </p>
             </div>
-        <div class="alle-sommer row align-items-start px-sm-5 text-center">
+        <div class="alle-sommer row align-items-start">
             <div class="col-12 col-sm-4 py-3">
               <a href="sommer1.html"><img src="img/sommer/sommer1billede1.png" alt=""></a>
               <a href="sommer1.html"><h3>Sommersalat med jordbær, burrata og nem focaccia</h3></a>
