--- a/efteraar.html
+++ b/efteraar.html
@@ -76,8 +76,8 @@
     </div>
 
     <!--INTRODUKTIONS-AFSNIT-->
-    <div class="container">
-        <div class="row align-items-start my-5 mx-sm-4">
+    <div class="custom-container">
+        <div class="row align-items-start my-5">
             <!--Tekstfelt m. introduktion til side-->
             <!--Tekst skal fylde 12 kol. på mobil og op efter 8 kol. -->
             <div class="col-12 col-sm-6">
@@ -93,9 +93,9 @@
 
 
     <!-- Efterårets lune retter - organge container -->
-        <div class="container-fluid orange">
-        <div class="container py-5">
-            <div class="col-12 py-4 col-lg-6 px-sm-5">
+        <div class="orange">
+        <div class="custom-container py-5">
+            <div class="col-12 py-4 col-lg-6">
                 <h2>Efterårets Lune Retter</h2>
                 <p>Her finder du opskrifter med alt det bedste fra efteråret – som græskar, rødbeder, pastinak og æbler. Retter, der smager af stearinlys, tæpper og lange, hyggelige middage med dem, du holder af.
                 </p>
