--- a/efteraar1.html
+++ b/efteraar1.html
@@ -66,13 +66,13 @@
 
 <!--TEKST UNDER HERO-->
 
-<div class="container my-sm-5 px-sm-5">
+<div class="custom-container my-sm-5">
 <h2>Efterårssuppe med Hokkaido, gulerod og ingefær</h2>
 </div>
 
 <!--INTRODUKTIONS-AFSNIT-->
-<div class="container">
-<div class="row align-items-start my-5 mx-sm-4">
+<div class="custom-container">
+<div class="row align-items-start my-5">
   <!--Tekstfelt m. introduktion til side-->
   <!--Tekst skal fylde 12 kol. på mobil og op efter 8 kol. -->
   <div class="col-12 col-sm-6">
@@ -89,28 +89,29 @@
 
 
 <!--Info-linje om tid og antal per.-->
-<section class="container-fluid orange py-5">
-<section class="text-center">
-  <h2>Opskrift</h2>
+<section class="orange py-5">
+  <div class="">
+    <section class="text-center">
+      <h2>Opskrift</h2>
 
-<!--Linje-->
-<hr class="linje">
+    <!--Linje-->
+    <hr class="linje">
 
 
 
-  <!--sætter hver p ved siden af hinanden horisontalt-->
-  <div class="d-flex justify-content-evenly">
-      <p>2 personer</p>
-      <p>Arbejdstid: 15 min</p>
-      <p>Tid i alt: 30 min</p>
-  </div>
-</section>
+    <!--sætter hver p ved siden af hinanden horisontalt-->
+      <div class="d-flex justify-content-evenly">
+        <p>2 personer</p>
+        <p>Arbejdstid: 15 min</p>
+        <p>Tid i alt: 30 min</p>
+      </div>
+    </section>
 
-<!--Sektion m. billeder og fremgangsmåde-->
-<div class="container my-5 px-sm-5">
-<div class="row align-items-start d-flex flex-column flex-md-column flex-lg-row">
+    <!--Sektion m. billeder og fremgangsmåde-->
+    <div class="custom-container my-5">
+    <div class="row align-items-start d-flex flex-column flex-md-column flex-lg-row">
 
-  <div class="col collage-opskrift-container">
+    <div class="col collage-opskrift-container">
         <div class="ingredienser">
               <h3>Ingredienser</h3>
                   <ul>
@@ -127,13 +128,13 @@
       <img src="img/efteraar/efteraar1billede1ny.png" class="billede opskrift-billede1" alt="">
       <img src="img/efteraar/efteraar1billede2ny.png" class="billede opskrift-billede2" alt="">
       <img src="img/efteraar/efteraar1billede3.png" class="billede opskrift-billede3" alt="">
-  </div>
+    </div>
 
 
 
-  <div class="col fremgangsmaade">
-    <h3>Fremgangsmåde</h3>
-      <p><strong>Forbered grønt</strong></p>
+    <div class="col fremgangsmaade">
+        <h3>Fremgangsmåde</h3>
+        <p><strong>Forbered grønt</strong></p>
           <p>Skær Hokkaido og gulerødder i tern (behold gerne skrællen på græskaret). Hak løg og hvidløg.</p>
 
           <p><strong>Svits grøntsager</strong></p>
@@ -147,17 +148,18 @@
 
           <p><strong> Server</strong></p>
           <p>Server med creme fraiche, lidt ristede græskarkerner eller et stykke brød til.</p>
-  </div>
-</div>
-</div>
+    </div>
+    </div>
+    </div>
 
+  </div>
 </section>
 
 
 
 
 <!--Musik-->
-<section class="container playlist-section my-5 px-sm-5">
+<section class="custom-container playlist-section my-5">
   <h3>Gør det hyggeligt!</h3>
   <p>Hæld et glas hvidvin op og nyd vores playliste, mens du hygger dig med madlavningen</p>
 
@@ -171,7 +173,7 @@
 
 
 <!--Andre opskrifter-->
-<section class="container my-5 px-sm-5">
+<section class="custom-container my-5">
   <h3>Hvad skal du lave i morgen?</h3>
 
   <div class="alle-efteraar d-flex flex-column flex-sm-row justify-content-center align-items-center gap-3 mt-3 text-center">
@@ -188,7 +190,7 @@
 
 <!--Kommentarspor-->
 
-<div class="comment-section container d-flex flex-column flex-md-row  my-5 px-sm-5">
+<div class="comment-section custom-container d-flex flex-column flex-md-row  my-5">
 <div class="comment-form">
   <h2>Har du spørgsmål til opskriften?</h2>
   <p>Har du et spørgsmål til opskriften eller lyst til at sende en hilsen med et tip, så kan du skrive til os i kommentarfeltet herunder.</p>
