--- a/efteraar2.html
+++ b/efteraar2.html
@@ -64,13 +64,13 @@
 </div>
 <!--TEKST UNDER HERO-->
 
-<div class="container my-sm-5 px-sm-5">
+<div class="custom-container my-sm-5">
 <h2>Efterårs-gnocchi med tomat, salvie og karamelliseret løg</h2>
 </div>
 
 <!--INTRODUKTIONS-AFSNIT-->
-<div class="container">
-<div class="row align-items-start my-5 mx-sm-4">
+<div class="custom-container">
+<div class="row align-items-start my-5">
   <!--Tekstfelt m. introduktion til side-->
   <!--Tekst skal fylde 12 kol. på mobil og op efter 8 kol. -->
   <div class="col-12 col-sm-6">
@@ -87,9 +87,10 @@
 
 
 <!--Info-linje om tid og antal per.-->
-<section class="container-fluid orange py-5">
-<section class="text-center">
-  <h2>Opskrift</h2>
+<section class="orange py-5">
+<div class="custom-container">
+      <section class="text-center">
+      <h2>Opskrift</h2>
 
 <!--Linje-->
 <hr class="linje">
@@ -105,7 +106,7 @@
 </section>
 
 <!--Sektion m. billeder og fremgangsmåde-->
-<div class="container my-5 px-sm-5">
+<div class="custom-container my-5 px-sm-5">
 <div class="row align-items-start d-flex flex-column flex-md-column flex-lg-row">
 
   <div class="col collage-opskrift-container">
@@ -157,7 +158,7 @@
 
 
 <!--Musik-->
-<section class="container playlist-section my-5 px-sm-5">
+<section class="custom-container playlist-section my-5">
   <h3>Gør det hyggeligt!</h3>
   <p>Hæld et glas hvidvin op og nyd vores playliste, mens du hygger dig med madlavningen</p>
 
@@ -171,7 +172,7 @@
 
 
 <!--Andre opskrifter-->
-<section class="container my-5 px-sm-5">
+<section class="custom-container my-5">
   <h3>Hvad skal du lave i morgen?</h3>
 
   <div class="alle-efteraar d-flex flex-column flex-sm-row justify-content-center align-items-center gap-3 mt-3 text-center">
@@ -184,13 +185,14 @@
 
 
   </div>
+  </div>
 </section>
 
 
 
 <!--Kommentarspor-->
 
-<div class="comment-section container d-flex flex-column flex-md-row  my-5 px-sm-5">
+<div class="comment-section custom-container d-flex flex-column flex-md-row  my-5">
 <div class="comment-form">
   <h2>Har du spørgsmål til opskriften?</h2>
   <p>Har du et spørgsmål til opskriften eller lyst til at sende en hilsen med et tip, så kan du skrive til os i kommentarfeltet herunder.</p>
