--- a/faellesskaal.html
+++ b/faellesskaal.html
@@ -75,9 +75,9 @@
 
 
   <!--Fællesskab omkring mad + billede m. glas-->
-<div class="container">
+<div class="custom-container">
   <div class="row align-items-start mx-md-5 mt-5">
-    <div class="col-12 col-lg-6 offset-lg-1 order-2 order-lg-1">
+    <div class="col-12 col-lg-6 order-2 order-lg-1">
       <h2>Fællesskab omkring mad</h2>
       <p>
         Hos Lille Skål handler fællesskab om at samles om maden - både fysisk og digitalt. Vi tror på, at madglæde vokser, når vi deler den med andre. Gennem opskrifter, events og inspiration skaber vi et madfællesskab, hvor sæsonens råvarer, hjemmelavet mad og nærvær er i centrum.
@@ -85,7 +85,7 @@
         Her er der plads til ægthed, stemning og det uperfekte - for det bedste måltid er det, vi nyder sammen.
       </p>
     </div>
-    <div class="col-12 col-lg-4 order-1 order-lg-2">
+    <div class="col-12 col-lg-6 order-1 order-lg-2">
       <img src="img/faellesskaal.png" alt="">
     </div>
   </div>
@@ -98,12 +98,12 @@
 
 
 <!--Lad os skabe minder sammen + billede af Lærke og Amalie-->
-<div class="container py-5">
+<div class="custom-container py-5">
   <div class=" row align-items-start ">
-    <div class="col-12 col-lg-5">
+    <div class="col-12 col-lg-6">
       <img src="img/stemning/peberogpasta.png" alt="">
     </div>
-    <div class="minder-sammen col-12 col-lg-5 offset-lg-1 ">
+    <div class="minder-sammen col-12 col-lg-6">
       <h2>Lad os skabe minder sammen</h2>
       <p>Hos Lille Skål elsker vi at samle mennesker om maden i virkeligheden. Derfor inviterer vi jævnligt til fællesspisninger, hyggelige madkurser og små sæsonbaserede events, hvor alle kan være med - uanset erfaring i køkkenet.
         <br>
@@ -115,8 +115,8 @@
 
   <!--Tredje række -->
   <!--E-magasin tilmelding-->
-<div class="orange container-fluid">
-    <div class="container my-5 py-5 px-sm-5 ">
+<div class="orange">
+    <div class="custom-container my-5 py-5">
         <div class="row g-md-3 g-lg-5">
             <div class="col-12 col-md-6 tilmelding-boks-faellesskaal">
             <h2>Bliv inspireret i din indbakke</h2>
@@ -157,8 +157,8 @@
 
 <!--Fjerde række med 2 kolonner-->
 <!--Digitalt fællesskab m. billeder fra kunder-->
-<div class="container my-5">
-    <div class="row g-md-3 g-lg-5 mx-sm-4">
+<div class="custom-container my-5">
+    <div class="row g-md-3 g-lg-5">
 
 
       <!--Carousel-->
