--- a/foraar.html
+++ b/foraar.html
@@ -20,14 +20,14 @@
 
 <body>
     <!--NAVIGATIONSBAR-->
-<nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top px-4">
+<nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top p-4">
   <div class="container-fluid">
     <a class="navbar-brand logo" href="index.html"><img src="img/logo.png" alt="logo skål"></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+    <div class="collapse navbar-collapse justify-content-end pe-4" id="navbarNav">
       <ul class="navbar-nav">
         
         <!-- DROPDOWN MENU -->
@@ -59,7 +59,7 @@
     <!--HERO-SEKTION-->
     <!--BAGGRUNDSBILLEDE-->
     <!--position-relative: gør container til ref. for det, som skal placeres ovenpå-->
-    <div class="hero-sektion position-relative">
+    <div class="container-fluid hero-sektion position-relative">
         <picture>
             <source media="(min-width: 768px)" srcset="img/foraar/foraarhero.png">
             <img src="img/foraar/foraarheromobil.png" alt="">
@@ -77,8 +77,8 @@
     </div>
 
     <!--INTRODUKTIONS-AFSNIT-->
-    <div class="container">
-        <div class="row align-items-start my-5 mx-sm-4">
+    <div class="custom-container">
+        <div class="row align-items-start my-5 ">
             <!--Tekstfelt m. introduktion til side-->
             <!--Tekst skal fylde 12 kol. på mobil og op efter 8 kol. -->
             <div class="col-12 col-sm-6">
@@ -89,36 +89,36 @@
             <!--Illustration til højre-->
             <!--Illustration skal ikke vises på mobil. Op efter fylder den 2 kol. og har 2 tomme kol. til venstre-->
             <div class="d-none d-sm-block col-sm-2 offset-sm-4">
-                <img src="img/illustrationer/aert.png" alt="illustration">
+                <img src="img/illustrationer/vin.png" alt="illustration">
             </div>
         </div>
     </div>
 
 
-    <div class="alle-foraar container-fluid orange">
-        <div class="container py-5">
-            <div class="col-12 py-4 col-lg-6 px-sm-5">
-                <h2>Smagen af forår</h2>
-                <p>Her finder du opskrifter med alt det bedste fra foråret – som asparges, spinat, radiser og nye kartofler.
-                Retter, der smager af solskin, spirende altaner og middage med åbne vinduer.</p>
-            </div>
-        <div class="row align-items-start px-sm-5 text-center">
+    <div class="custom-container alle-foraar">
+        <div class="col-12 py-4 col-lg-6">
+          <h2>Smagen af forår</h2>
+          <p>Her finder du opskrifter med alt det bedste fra foråret – som asparges, spinat, radiser og nye kartofler.
+            Retter, der smager af solskin, spirende altaner og middage med åbne vinduer.</p>
+        </div>
+
+        <div class="row align-items-start text-center">
             <div class="col-12 col-sm-4 py-3 text-center">
               <a href="foraar1.html"><img src="img/foraar/foraaropskrift1.png" alt=""></a>
               <a href="foraar1.html"><h3>Pasta med tomat, spidskål og ramsløgspesto</h3></a>
               </div>
+
             <div class="col-12 col-sm-4 py-3 text-center">
               <a href="foraar2.html"><img src="img/foraar/foraar2billede1.png" alt=""></a>
               <a href="foraar2.html"><h3>Forårs-orzo med tomater og citron</h3></a>
             </div>
-        <div class="col-12 col-sm-4 py-3 text-center">
-          <a href="foraar3.html"><img src="img/foraar/foraar3billede2.png" alt=""></a>
-          <a href="foraar3.html"><h3>Forårsnudler med radiser, porre og sesam</h3></a>
-        </div>
-        </div>
-    </div>
-    </div>
 
+            <div class="col-12 col-sm-4 py-3 text-center">
+              <a href="foraar3.html"><img src="img/foraar/foraar3billede2.png" alt=""></a>
+              <a href="foraar3.html"><h3>Forårsnudler med radiser, porre og sesam</h3></a>
+            </div>
+        </div>
+    </div>
 
 
     <footer class="py-4">
@@ -148,8 +148,13 @@
                     </div>
       
                     <div class="row mt-5">
+                      <div class="hjerte col-4 text-end align-items-between">
+                        <!-- fs-1 gør det størrer -->
+                        <i class="bi bi-suit-heart fs-3"></i>
+                      </div>
                       <div class="col-8 text-end ps-5">
                         <a href=""><i class="bi bi-instagram m-2 fs-3"></i></a>
+                        <a href=""><i class="bi bi-tiktok fs-3"></i></a>
                       </div>
                 </div>
             </div>
