--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
 </div>
 
 <!--INTRODUKTIONS-AFSNIT-->
-<div class="container">
-  <div class="row align-items-start my-5 mx-sm-4">
+<div class="custom-container">
+  <div class="row align-items-start my-5">
     <!--Tekstfelt m. introduktion til side-->
     <!--Tekst skal fylde 12 kol. på mobil og op efter 8 kol. -->
     <div class="col-12 col-sm-6">
@@ -99,9 +99,10 @@
 
 
 
-<div class="container-fluid orange py-5 px-5">
-    <!-- Sommer -->
-    <div id="summer" class="season-container row d-none mx-sm-5">
+<div class="orange py-5">
+  <div class="custom-container">
+        <!-- Sommer -->
+    <div id="summer" class="season-container row d-none">
       <div class="col-12 col-md-6">
         <h2>Velkommen til sommeren!</h2>
         <p>
@@ -118,7 +119,7 @@
     </div>
 
     <!-- Forår -->
-    <div id="spring" class=" season-container row d-none mx-sm-5">
+    <div id="spring" class=" season-container row d-none">
       <div class="col-12 col-md-6">
         <h2>Velkommen til foråret!</h2>
         <p>
@@ -134,7 +135,7 @@
     </div>
 
     <!-- Efterår -->
-    <div id="autumn" class="season-container row d-none mx-sm-5">
+    <div id="autumn" class="season-container row d-none">
       <div class="col-12 col-md-6">
         <h2>Velkommen til efteråret!</h2>
         <p>Efteråret bringer dybe farver og mere robuste råvarer som græskar, rodfrugter, kål og svampe. Det er sæson for varme og mættende retter, der giver både energi og hygge, når dagene bliver kortere og køligere. 
@@ -149,7 +150,7 @@
     </div>
 
     <!-- Vinter -->
-    <div id="winter" class="season-container d-none mx-sm-5">
+    <div id="winter" class="season-container d-none">
       <div class="col-12 col-md-6">
         <h2>Velkommen til vinteren!</h2>
         <p>
@@ -163,13 +164,14 @@
         <a href="vinter.html"><img src="img/vinter/vinter1billede1.png" alt="Vinter" class="img-fluid rounded" /></a>
       </div>
     </div>
+  </div>
 
   </div>
 
 
 
 <!--E-MAGASIN-AFSNIT-->
-<section class="collage-container">
+<section class="collage-container custom-container">
         <img src="img/kurv.png" class="billede kurv" alt="">
         <img src="img/foraarsbord.png" class="billede foraarsbord" alt="">
         <img src="img/illustrationer/porre.png" class="billede asparges" alt="">
@@ -200,7 +202,7 @@
 </section>
 
 <!--FÆLLESSKAB-AFSNIT-->
-<section class="container-fluid orange position-relative faelles-bord">
+<section class="orange position-relative faelles-bord">
   <a href="faellesskaal.html">
         <picture class="d-flex justify-content-center">
         <source media="(min-width: 768px)" srcset="img/deskfaellesskaal.png">
