--- a/vinter1.html
+++ b/vinter1.html
@@ -67,13 +67,13 @@
 
 <!--TEKST UNDER HERO-->
 
-<div class="container my-sm-5 px-sm-5">
+<div class="custom-container my-sm-5">
   <h2>Vinter-nudler med porre, kål og cremet sesamsauce</h2>
 </div>
 
 <!--INTRODUKTIONS-AFSNIT-->
-<div class="container">
-  <div class="row align-items-start my-5 mx-sm-4">
+<div class="custom-container">
+  <div class="row align-items-start my-5">
     <!--Tekstfelt m. introduktion til side-->
     <!--Tekst skal fylde 12 kol. på mobil og op efter 8 kol. -->
     <div class="col-12 col-sm-6">
@@ -90,8 +90,9 @@
 
 
 <!--Info-linje om tid og antal per.-->
-<section class="container-fluid orange py-5">
-<section class="text-center">
+<section class="orange py-5">
+<div class="custom-container">
+      <section class="text-center">
     <h2>Opskrift</h2>
 
 <!--Linje-->
@@ -108,7 +109,7 @@
 </section>
 
 <!--Sektion m. billeder og fremgangsmåde-->
-<div class="container my-5 px-sm-5">
+<div class="custom-container my-5">
   <div class="row align-items-start d-flex flex-column flex-md-column flex-lg-row">
 
     <div class="col collage-opskrift-container">
@@ -158,12 +159,13 @@
 </div>
 
 </section>
+</div>
 
 
 
 
 <!--Musik-->
-<section class="container playlist-section my-5 px-sm-5">
+<section class="custom-container playlist-section my-5">
     <h3>Gør det hyggeligt!</h3>
     <p>Hæld et glas hvidvin op og nyd vores playliste, mens du hygger dig med madlavningen</p>
 
@@ -177,7 +179,7 @@
 
 
 <!--Andre opskrifter-->
-<section class="container my-5 px-sm-5">
+<section class="custom-container my-5">
     <h3>Hvad skal du lave i morgen?</h3>
 
     <div class="alle-vinter d-flex flex-column flex-sm-row justify-content-center align-items-center gap-3 mt-3 text-center">
@@ -194,7 +196,7 @@
 
 <!--Kommentarspor-->
 
-<div class="comment-section container d-flex flex-column flex-md-row  my-5 px-sm-5">
+<div class="comment-section custom-container d-flex flex-column flex-md-row  my-5">
   <div class="comment-form">
     <h2>Har du spørgsmål til opskriften?</h2>
     <p>Har du et spørgsmål til opskriften eller lyst til at sende en hilsen med et tip, så kan du skrive til os i kommentarfeltet herunder.</p>
