--- a/test.html
+++ b/test.html
@@ -59,26 +59,13 @@
     <!--HERO-SEKTION-->
     <!--BAGGRUNDSBILLEDE-->
     <!--position-relative: gør container til ref. for det, som skal placeres ovenpå-->
-    <div class="container-fluid hero-sektion position-relative">
-        <picture>
-            <source media="(min-width: 768px)" srcset="img/foraar/foraarhero.png">
-            <img src="img/foraar/foraarheromobil.png" alt="">
-        </picture>
-
-
-        <!--TEKST/LOGO OVER BAGGRUNDSBILLEDE-->
-        <!--position-absolute top-0 start 0: placer indholdet i øverste venstre hjørne-->
-        <!--w-100 h-100: gør overlay lige så stort som billedet-->
-        <!--d-flex ....: centrerer tekst midt i billedet-->
-        <div
-            class="position-absolute top-0 start-0 w-100 h-100 d-flex flex-column justify-content-center       align-items-center text-center">
-            <h1>Forår</h1>
-        </div>
+    <div class="custom-container text-center">
+        <h1 class="saeson-overskrift pt-5">Forår</h1>
     </div>
 
     <!--INTRODUKTIONS-AFSNIT-->
-    <div class="custom-container">
-        <div class="row align-items-start my-5 ">
+    <div class="custom-container pt-3">
+        <div class="row align-items-start">
             <!--Tekstfelt m. introduktion til side-->
             <!--Tekst skal fylde 12 kol. på mobil og op efter 8 kol. -->
             <div class="col-12 col-sm-6">
