--- a/faellesskaal.html
+++ b/faellesskaal.html
@@ -76,7 +76,7 @@
 
   <!--Fællesskab omkring mad + billede m. glas-->
 <div class="custom-container">
-  <div class="row align-items-start mx-md-5 mt-5">
+  <div class="row align-items-start mt-5">
     <div class="col-12 col-lg-6 order-2 order-lg-1">
       <h2>Fællesskab omkring mad</h2>
       <p>
