--- a/omos.html
+++ b/omos.html
@@ -63,7 +63,7 @@
   <div class="row align-items-start my-1">
     <div class="col-12 col-md-6">
       <!--Billede af Amalie og Lærke-->
-      <img class="kokke" src="img/omos/kokke.png" alt="">
+      <img class="kokke" src="img/omos/kokke1.png" alt="">
     </div>
     <div class="col-12 col-md-6 my-5">
       <!--Tekst om kokke-->
@@ -88,7 +88,7 @@
     <!--Order: så der ved mobilverison er en anden rækkefølge. Tekst+billede og tekst+billede-->
     <div class="col-12 col-md-6 order-1 order-md-1 ">
       <!--Billede af Katrine og Marie-->
-      <img class="teknik" src="img/omos/teknik.png" alt="">
+      <img class="teknik" src="img/omos/teknik1.png" alt="">
     </div>
   </div>
 </div>
@@ -97,9 +97,9 @@
 <div class="custom-container text-center">
   <div class="row align-items-start">
     <div class="col-6 col-md-5 offset-md-1">
-      <img src="img/omos/paastranden.png" alt="">
+      <img src="img/omos/paastranden1.png" alt="">
     </div>
-    <div class="col-6 col-md-4">
+    <div class="col-6 col-md-4 hugo">
       <img src="img/omos/hugooglaerke.png" alt="">
     </div>
   </div>
