--- a/foraar.html
+++ b/foraar.html
@@ -94,31 +94,33 @@
         </div>
     </div>
 
+   <!-- Smagen af forår - orange container -->
+<div class="orange">
+  <div class="custom-container alle-foraar">
+    <div class="col-12 py-4 col-lg-6">
+      <h2>Smagen af forår</h2>
+      <p>Her finder du opskrifter med alt det bedste fra foråret – som asparges, spinat, radiser og nye kartofler.
+        Retter, der smager af solskin, spirende altaner og middage med åbne vinduer.</p>
+    </div>
 
-    <div class="custom-container alle-foraar">
-        <div class="col-12 py-4 col-lg-6">
-          <h2>Smagen af forår</h2>
-          <p>Her finder du opskrifter med alt det bedste fra foråret – som asparges, spinat, radiser og nye kartofler.
-            Retter, der smager af solskin, spirende altaner og middage med åbne vinduer.</p>
+    <div class="row align-items-start text-center">
+        <div class="col-12 col-sm-4 py-3 text-center">
+          <a href="foraar1.html"><img src="img/foraar/foraaropskrift1.png" alt=""></a>
+          <a href="foraar1.html"><h3>Pasta med tomat, spidskål og ramsløgspesto</h3></a>
+          </div>
+
+        <div class="col-12 col-sm-4 py-3 text-center">
+          <a href="foraar2.html"><img src="img/foraar/foraar2billede1.png" alt=""></a>
+          <a href="foraar2.html"><h3>Forårs-orzo med tomater og citron</h3></a>
         </div>
 
-        <div class="row align-items-start text-center">
-            <div class="col-12 col-sm-4 py-3 text-center">
-              <a href="foraar1.html"><img src="img/foraar/foraaropskrift1.png" alt=""></a>
-              <a href="foraar1.html"><h3>Pasta med tomat, spidskål og ramsløgspesto</h3></a>
-              </div>
-
-            <div class="col-12 col-sm-4 py-3 text-center">
-              <a href="foraar2.html"><img src="img/foraar/foraar2billede1.png" alt=""></a>
-              <a href="foraar2.html"><h3>Forårs-orzo med tomater og citron</h3></a>
-            </div>
-
-            <div class="col-12 col-sm-4 py-3 text-center">
-              <a href="foraar3.html"><img src="img/foraar/foraar3billede2.png" alt=""></a>
-              <a href="foraar3.html"><h3>Forårsnudler med radiser, porre og sesam</h3></a>
-            </div>
+        <div class="col-12 col-sm-4 py-3 text-center">
+          <a href="foraar3.html"><img src="img/foraar/foraar3billede2.png" alt=""></a>
+          <a href="foraar3.html"><h3>Forårsnudler med radiser, porre og sesam</h3></a>
         </div>
     </div>
+</div>
+</div>
 
 
     <footer class="py-4">
