--- a/faellesskaal.html
+++ b/faellesskaal.html
@@ -116,7 +116,7 @@
   <!--Tredje række -->
   <!--E-magasin tilmelding-->
 <div class="orange">
-    <div class="custom-container my-5 py-5">
+    <div class="custom-container py-5">
         <div class="row g-md-3 g-lg-5">
             <div class="col-12 col-md-6 tilmelding-boks-faellesskaal">
             <h2>Bliv inspireret i din indbakke</h2>
@@ -135,7 +135,7 @@
         </div>
 
       <!--E-magasin fra Indesign-->
-      <div class="col-12 col-md-6 my-3">
+      <div class="col-12 col-md-6">
         <div class="container">
           <div class="embed-responsive embed-responsive-16by9">
             <iframe 
