--- a/sommer1.html
+++ b/sommer1.html
@@ -65,22 +65,19 @@
 
 <!--TEKST UNDER HERO-->
 
-<div class="custom-container my-sm-6">
-  <h2>Sommersalat med jordbær, burrata og nem focaccia</h2>
-</div>
-
 <!--INTRODUKTIONS-AFSNIT-->
 <div class="custom-container">
   <div class="row align-items-start my-3">
     <!--Tekstfelt m. introduktion til side-->
     <!--Tekst skal fylde 12 kol. på mobil og op efter 8 kol. -->
-    <div class="col-12 col-sm-6">
+    <div class="col-12 col-sm-7">
+      <h2>Sommersalat med jordbær, burrata og nem focaccia</h2>
       <p>En luksuriøs og alligevel hverdagsnem sommersalat med danske jordbær, cremet burrata og sprøde mandler <br> - serveret med nybagt focaccia, som passer perfekt til.</p>
     </div>
     <!--Illustration til højre-->
     <!--Illustration skal ikke vises på mobil. Op efter fylder den 2 kol. og har 2 tomme kol. til venstre-->
     <!--Illustration skal ikke vises på mobil. Op efter fylder den 2 kol. og har 2 tomme kol. til venstre-->
-    <div class="d-none d-sm-block col-sm-3 offset-sm-1">
+    <div class="d-none d-sm-block col-sm-3 offset-md-1">
       <img class="illustration-introduktion-sommer1" src="img/illustrationer/rosmarin.png" alt="illustration">
     </div>
   </div>
