--- a/foraar3.html
+++ b/foraar3.html
@@ -62,23 +62,19 @@
 
 </div>
 
-<!--TEKST UNDER HERO-->
-
-<div class="custom-container my-sm-5">
-  <h2>Forårsnudler med radiser, porre og sesam</h2>
-</div>
 
 <!--INTRODUKTIONS-AFSNIT-->
 <div class="custom-container">
   <div class="row align-items-start my-5">
     <!--Tekstfelt m. introduktion til side-->
     <!--Tekst skal fylde 12 kol. på mobil og op efter 8 kol. -->
-    <div class="col-12 col-sm-6">
+    <div class="col-12 col-sm-7">
+      <h2>Forårsnudler med radiser, porre og sesam</h2>
       <p>En let og lun nudelret med sprøde radiser, sød porre og et strejf af citron og sesam. Smager af forår og kræver næsten ingen indsats.</p>
     </div>
     <!--Illustration til højre-->
     <!--Illustration skal ikke vises på mobil. Op efter fylder den 2 kol. og har 2 tomme kol. til venstre-->
-    <div class="d-none d-sm-block col-sm-2 offset-sm-4">
+    <div class="d-none d-sm-block col-sm-3 offset-md-1">
       <img src="img/illustrationer/porre.png" alt="illustration">
     </div>
   </div>
