--- a/alleopskrifter.html
+++ b/alleopskrifter.html
@@ -52,23 +52,20 @@
   </div>
 </nav>
 
-<!--OVERSKRIFT-->
-<div class="custom-container my-sm-5">
-  <h1>Alle opskrifter</h1>
-  <h4>Gør mere med mindre – lækre måltider til små budgetter.</h4>
-</div>
 
 <!--INTRODUKTIONS-AFSNIT-->
 <div class="custom-container">
   <div class="row align-items-start my-5">
     <!--Tekstfelt m. introduktion til side-->
     <!--Tekst skal fylde 12 kol. på mobil og op efter 8 kol. -->
-    <div class="col-12 col-sm-6">
-      <p>Frisk forår, let sommer, varm vinter eller smagfuldt efterår? Her finder du nemme opskrifter med sæsonens danske råvarer – perfekt til både hverdagsmad og hyggelige måltider.</p>
+    <div class="col-12 col-sm-7">
+      <h1>Alle opskrifter</h1>
+      <h4>Gør mere med mindre - lækre måltider til små budgetter.</h4>
+      <p>Frisk forår, let sommer, varm vinter eller smagfuldt efterår? Her finder du nemme opskrifter med sæsonens danske råvarer - perfekt til både hverdagsmad og hyggelige måltider.</p>
     </div>
     <!--Illustration til højre-->
     <!--Illustration skal ikke vises på mobil. Op efter fylder den 2 kol. og har 2 tomme kol. til venstre-->
-    <div class="d-none d-sm-block col-sm-2 offset-sm-4">
+    <div class="d-none d-sm-block col-sm-3 offset-md-1">
       <img src="img/illustrationer/rodlog.png" alt="illustration">
     </div>
   </div>
