--- a/efteraar1.html
+++ b/efteraar1.html
@@ -64,23 +64,19 @@
 
 </div>
 
-<!--TEKST UNDER HERO-->
-
-<div class="custom-container my-sm-5">
-<h2>Efterårssuppe med Hokkaido, gulerod og ingefær</h2>
-</div>
 
 <!--INTRODUKTIONS-AFSNIT-->
 <div class="custom-container">
 <div class="row align-items-start my-5">
   <!--Tekstfelt m. introduktion til side-->
   <!--Tekst skal fylde 12 kol. på mobil og op efter 8 kol. -->
-  <div class="col-12 col-sm-6">
+  <div class="col-12 col-sm-7">
+    <h2>Efterårssuppe med Hokkaido, gulerod og ingefær</h2>
     <p>Blød og cremet suppe med sødme fra rodfrugter og et lille spark fra ingefær. Perfekt til regnvejrsdage, uldsokker og ro på.</p>
   </div>
   <!--Illustration til højre-->
   <!--Illustration skal ikke vises på mobil. Op efter fylder den 2 kol. og har 2 tomme kol. til venstre-->
-  <div class="d-none d-sm-block col-sm-2 offset-sm-4">
+  <div class="d-none d-sm-block col-sm-3 offset-md-1">
     <img src="img/illustrationer/lys.png" alt="illustration">
   </div>
 </div>
@@ -90,7 +86,7 @@
 
 <!--Info-linje om tid og antal per.-->
 <section class="orange py-5">
-  <div class="">
+  <div class="custom-container">
     <section class="text-center">
       <h2>Opskrift</h2>
 
