--- a/efteraar2.html
+++ b/efteraar2.html
@@ -61,24 +61,19 @@
     <img src="img/efteraar/heroefteraarlille3.png" alt="">
   </picture>
 
-</div>
-<!--TEKST UNDER HERO-->
-
-<div class="custom-container my-sm-5">
-<h2>Efterårs-gnocchi med tomat, salvie og karamelliseret løg</h2>
-</div>
 
 <!--INTRODUKTIONS-AFSNIT-->
 <div class="custom-container">
 <div class="row align-items-start my-5">
   <!--Tekstfelt m. introduktion til side-->
   <!--Tekst skal fylde 12 kol. på mobil og op efter 8 kol. -->
-  <div class="col-12 col-sm-6">
-    <p>Blød gnocchi møder søde løg, syrlige tomater og sprød salvie. En varm skål efterår på under 30 minutter – perfekt til dovne hverdagsaftener.</p>
+  <div class="col-12 col-sm-7">
+    <h2>Efterårs-gnocchi med tomat, salvie og karamelliseret løg</h2>
+    <p>Blød gnocchi møder søde løg, syrlige tomater og sprød salvie. En varm skål efterår på under 30 minutter <br>- perfekt til dovne hverdagsaftener.</p>
   </div>
   <!--Illustration til højre-->
   <!--Illustration skal ikke vises på mobil. Op efter fylder den 2 kol. og har 2 tomme kol. til venstre-->
-  <div class="d-none d-sm-block col-sm-2 offset-sm-4">
+  <div class="d-none d-sm-block col-sm-3 offset-md-1">
     <img src="img/illustrationer/basilikum.png" alt="illustration">
   </div>
 </div>
