--- a/efteraar3.html
+++ b/efteraar3.html
@@ -62,23 +62,19 @@
 
 </div>
 
-<!--TEKST UNDER HERO-->
-
-<div class="custom-container my-sm-5">
-<h2>Efterårspande med karamelliserede porrer og gulerødder</h2>
-</div>
 
 <!--INTRODUKTIONS-AFSNIT-->
 <div class="custom-container">
 <div class="row align-items-start my-5">
   <!--Tekstfelt m. introduktion til side-->
   <!--Tekst skal fylde 12 kol. på mobil og op efter 8 kol. -->
-  <div class="col-12 col-sm-6">
-    <p>En lun og simpel hverdagsret med sødme fra stegte gulerødder, karamelliseret porre og et strejf af citron. Perfekt som hovedret med brød til – eller som tilbehør.</p>
+  <div class="col-12 col-sm-7">
+    <h2>Efterårspande med karamelliserede porrer og gulerødder</h2>
+    <p>En lun og simpel hverdagsret med sødme fra stegte gulerødder, karamelliseret porre og et strejf af citron. <br>Perfekt som hovedret med brød til - eller som tilbehør.</p>
   </div>
   <!--Illustration til højre-->
   <!--Illustration skal ikke vises på mobil. Op efter fylder den 2 kol. og har 2 tomme kol. til venstre-->
-  <div class="d-none d-sm-block col-sm-2 offset-sm-4">
+  <div class="d-none d-sm-block col-sm-3 offset-md-1">
     <img src="img/illustrationer/lys.png" alt="illustration">
   </div>
 </div>
