--- a/foraar2.html
+++ b/foraar2.html
@@ -63,23 +63,19 @@
 
 </div>
 
-<!--TEKST UNDER HERO-->
-
-<div class="custom-container my-sm-5">
-  <h2>Forårs-orzo med tomater og citron</h2>
-</div>
 
 <!--INTRODUKTIONS-AFSNIT-->
 <div class="custom-container">
   <div class="row align-items-start my-5">
     <!--Tekstfelt m. introduktion til side-->
     <!--Tekst skal fylde 12 kol. på mobil og op efter 8 kol. -->
-    <div class="col-12 col-sm-6">
-      <p>Lun orzo med søde tomater, spinat og citron – en hurtig pastaret med smag af forår og solmodne grøntsager. Nem at lave, svær ikke at elske.</p>
+    <div class="col-12 col-sm-7">
+      <h2>Forårs-orzo med tomater og citron</h2>
+      <p>Lun orzo med søde tomater, spinat og citron - en hurtig pastaret med smag af forår og solmodne grøntsager. Nem at lave, svær ikke at elske.</p>
     </div>
     <!--Illustration til højre-->
     <!--Illustration skal ikke vises på mobil. Op efter fylder den 2 kol. og har 2 tomme kol. til venstre-->
-    <div class="d-none d-sm-block col-sm-2 offset-sm-4">
+    <div class="d-none d-sm-block col-sm-3 offset-md-1">
       <img src="img/illustrationer/rodlog.png" alt="illustration">
     </div>
   </div>
