--- a/sommer2.html
+++ b/sommer2.html
@@ -64,23 +64,19 @@
 
 </div>
 
-<!--TEKST UNDER HERO-->
-
-<div class="custom-container my-sm-5">
-  <h2>Sommer-tacos med ærtemos og grillede grøntsager</h2>
-</div>
 
 <!--INTRODUKTIONS-AFSNIT-->
 <div class="custom-container">
   <div class="row align-items-start my-5">
     <!--Tekstfelt m. introduktion til side-->
     <!--Tekst skal fylde 12 kol. på mobil og op efter 8 kol. -->
-    <div class="col-12 col-sm-6">
-      <p>Små, farverige tacos fyldt med sæsonens grønt og cremet ærtemos – perfekt til venneaftener, hvor man spiser med fingrene og griner højt.</p>
+    <div class="col-12 col-sm-7">
+        <h2>Sommer-tacos med ærtemos og grillede grøntsager</h2>
+      <p>Små, farverige tacos fyldt med sæsonens grønt og cremet ærtemos <br> -  perfekt til venneaftener, hvor man spiser med fingrene og griner højt.</p>
     </div>
     <!--Illustration til højre-->
     <!--Illustration skal ikke vises på mobil. Op efter fylder den 2 kol. og har 2 tomme kol. til venstre-->
-    <div class="d-none d-sm-block col-sm-2 offset-sm-4">
+    <div class="d-none d-sm-block col-sm-3 offset-md-1">
       <img src="img/illustrationer/aert.png" alt="illustration">
     </div>
   </div>
