--- a/vinter.html
+++ b/vinter.html
@@ -54,38 +54,18 @@
   </div>
 </nav>
 
-
-    <!--HERO-SEKTION-->
-    <!--BAGGRUNDSBILLEDE-->
-    <!--position-relative: gør container til ref. for det, som skal placeres ovenpå-->
-    <div class="hero-sektion position-relative">
-        <picture>
-            <source media="(min-width: 768px)" srcset="img/vinter/vinterhero.png">
-            <img src="img/vinter/vinterheromobil.png" alt="">
-        </picture>
-
-
-        <!--TEKST/LOGO OVER BAGGRUNDSBILLEDE-->
-        <!--position-absolute top-0 start 0: placer indholdet i øverste venstre hjørne-->
-        <!--w-100 h-100: gør overlay lige så stort som billedet-->
-        <!--d-flex ....: centrerer tekst midt i billedet-->
-        <div
-            class="position-absolute top-0 start-0 w-100 h-100 d-flex flex-column justify-content-center       align-items-center text-center">
-            <h1>Vinter</h1>
-        </div>
-    </div>
-
     <!--INTRODUKTIONS-AFSNIT-->
     <div class="custom-container">
         <div class="row align-items-start my-5">
             <!--Tekstfelt m. introduktion til side-->
             <!--Tekst skal fylde 12 kol. på mobil og op efter 8 kol. -->
-            <div class="col-12 col-sm-6">
+            <div class="col-12 col-sm-7">
+                <h1>Vinter</h1>
                 <p>Vinteren har lagt sig over byen, og køkkenet bliver et naturligt samlingspunkt. Det er sæson for varme måltider, dybe smage og råvarer, der kan lidt mere end man tror – også selvom de ser rustikke ud.</p>
             </div>
             <!--Illustration til højre-->
             <!--Illustration skal ikke vises på mobil. Op efter fylder den 2 kol. og har 2 tomme kol. til venstre-->
-            <div class="d-none d-sm-block col-sm-2 offset-sm-4">
+            <div class="d-none d-sm-block col-sm-3 offset-md-1">
                 <img src="img/illustrationer/porre.png" alt="illustration">
             </div>
         </div>
