--- a/vinter1.html
+++ b/vinter1.html
@@ -65,23 +65,19 @@
 
 </div>
 
-<!--TEKST UNDER HERO-->
-
-<div class="custom-container my-sm-5">
-  <h2>Vinter-nudler med porre, kål og cremet sesamsauce</h2>
-</div>
 
 <!--INTRODUKTIONS-AFSNIT-->
 <div class="custom-container">
   <div class="row align-items-start my-5">
     <!--Tekstfelt m. introduktion til side-->
     <!--Tekst skal fylde 12 kol. på mobil og op efter 8 kol. -->
-    <div class="col-12 col-sm-6">
+    <div class="col-12 col-sm-7">
+      <h2>Vinter-nudler med porre, kål og cremet sesamsauce</h2>
       <p>En varm, trøstende nudelret med sprød kål, sødme fra porre og en cremet asiatisk inspireret sauce. Perfekt til kolde hverdagsaftener, hvor man har brug for lidt varme og kærlighed i en skål.</p>
     </div>
     <!--Illustration til højre-->
     <!--Illustration skal ikke vises på mobil. Op efter fylder den 2 kol. og har 2 tomme kol. til venstre-->
-    <div class="d-none d-sm-block col-sm-2 offset-sm-4">
+    <div class="d-none d-sm-block col-sm-3 offset-md-1">
       <img src="img/illustrationer/porre.png" alt="illustration">
     </div>
   </div>
