--- a/vinter2.html
+++ b/vinter2.html
@@ -64,23 +64,19 @@
 
 </div>
 
-<!--TEKST UNDER HERO-->
-
-<div class="custom-container my-sm-5">
-  <h2>Vinterpasta med grønkålssauce og citron</h2>
-</div>
 
 <!--INTRODUKTIONS-AFSNIT-->
 <div class="custom-container">
   <div class="row align-items-start my-5">
     <!--Tekstfelt m. introduktion til side-->
     <!--Tekst skal fylde 12 kol. på mobil og op efter 8 kol. -->
-    <div class="col-12 col-sm-6">
+    <div class="col-12 col-sm-7">
+      <h2>Vinterpasta med grønkålssauce og citron</h2>
       <p>En grøn, cremet pastaret med vinterens bedste bladgrønt – nem at lave og fyldt med varme og friskhed.</p>
     </div>
     <!--Illustration til højre-->
     <!--Illustration skal ikke vises på mobil. Op efter fylder den 2 kol. og har 2 tomme kol. til venstre-->
-    <div class="d-none d-sm-block col-sm-2 offset-sm-4">
+    <div class="d-none d-sm-block col-sm-3 offset-md-1">
       <img src="img/illustrationer/kaal.png" alt="illustration">
     </div>
   </div>
